<resources>
    <string name="app_name">EasyTrip</string>
    <string name="lieuETchoixAeroport" />
    <string name="lieuTVafficherAeroports" />
    <string name="lieuLVlisteAeroports" />
    <string name="lieuTVnbResultats" />
    <string name="lieuHTlisteAeroports">-> Aéroport, ville, pays, code</string>
    <string name="accueilTVafficherDepart">Départ</string>
    <string name="accueilTVafficherArrivee">Arrivée</string>
    <string name="accueilETChoixDepart" />
    <string name="accueilETChoixArrivee" />
    <string name="accueilTVdateDepart">Date aller</string>
    <string name="accueilETdateDepart" />
    <string name="accueilTVdateArrivee">Date retour</string>
    <string name="accueilCVcalendrier" />
    <string name="accueilCBallerRetour">Aller-retour</string>
    <string name="accueilTVchoixClasse">Classe</string>
    <string name="accueilBTvalider">RECHERCHER</string>
    <string name="rechercheETFiltrer">Filtrer</string>
    <string name="rechercheETRetour">Retour</string>
    <string name="accueilTVtitre">EASY TRIP</string>
    <string name="accueilTVsousTitre">WE MOVE PEOPLES</string>
    <string name="accueilBTdetail">Afficher détail</string>
    <string name="recepisseTVtitre">VOTRE CHOIX</string>
    <string name="recepisseTVrecap" />
    <string name="recepisseBTconfirmer">CONFIRMER</string>
    <string name="passagerAdulteditText">1</string>
    <string name="passagersEnfanteditText">0</string>
    <string-array name="passagerSPclasse">
        <item>Economique</item>
        <item>Affaire</item>
        <item>Business</item>
    </string-array>
    <string name="title_activity_connexion">Connexion</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe (optionnel)</string>
    <string name="action_sign_in">CONNEXION</string>
    <string name="action_sign_in_short">CONNEXION</string>
    <string name="error_invalid_email">L\'email n\'existe pas</string>
    <string name="error_invalid_password">Le mot de passe est trop court</string>
    <string name="error_incorrect_password">Mot de passe erroné</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="ouvertureBTconnexion">CONNEXION</string>
    <string name="ouvertureTVidentifiant" />
    <string name="ouvertureTVlisteReservations" />
    <string name="recepisseTVidentifiant" />
    <string name="listeReservationTV">VOS RESERVATIONS</string>
</resources>
