<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/blue"
    tools:context="com.example.merguez.easytrip.affichage.Recepisse">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recepisseTVtitre"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:id="@+id/recepisseTVtitre"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/recepisseTVrecap"
        android:textColor="@color/black"
        android:lineSpacingExtra="20dp"
        android:background="@drawable/bord_bleufonce"
        android:id="@+id/recepisseTVrecap"
        android:layout_below="@+id/recepisseTVtitre"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recepisseBTconfirmer"
        android:id="@+id/recepisseBTconfirmer"
        android:textColor="@color/black"
        android:background="#f5a607"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/recepisseTVidentifiant"
        android:id="@+id/recepisseTVidentifiant"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/recepisseBTconfirmer"
        android:layout_alignParentStart="true" />
</RelativeLayout>
