<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/blue"
    tools:context=".affichage.Accueil"
    android:id="@+id/lieuLayout"
    android:foregroundGravity="top"
    android:gravity="fill_horizontal|top">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/accueilTVafficherDepart"
        android:id="@+id/accueilTVafficherDepart"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_alignEnd="@+id/accueilETChoixDepart" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accueilETChoixDepart"
        android:height="30dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/accueilTVafficherDepart"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:background="#ffffff"
        android:focusableInTouchMode="false"
        android:text="@string/accueilETChoixDepart" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/accueilTVafficherArrivee"
        android:id="@+id/accueilTVafficherArrivee"
        android:layout_below="@+id/accueilETChoixDepart"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/accueilETChoixDepart" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accueilETChoixArrivee"
        android:height="30dp"
        android:background="#ffffff"
        android:focusableInTouchMode="false"
        android:layout_below="@+id/accueilTVafficherArrivee"
        android:layout_marginTop="5dp"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/accueilTVafficherArrivee"
        android:text="@string/accueilETChoixArrivee" />
</RelativeLayout>
