<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/blue"
    tools:context=".affichage.Accueil"
    android:id="@+id/lieuLayout"
    android:foregroundGravity="top"
    android:gravity="fill_horizontal|top">

    <TextView
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/accueilTVafficherDepart"
        android:textSize="20sp"
        android:background="@drawable/rect_blanc_bord_noir"
        android:id="@+id/accueilTVafficherDepart"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:id="@+id/accueilETChoixDepart"
        android:layout_marginTop="100dp"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:background="@drawable/rect_blanc_bord_noir"
        android:focusableInTouchMode="false"
        android:text=""
        android:layout_toEndOf="@+id/accueilTVafficherDepart" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/accueilTVafficherArrivee"
        android:textSize="20sp"
        android:background="@drawable/rect_blanc_bord_noir"
        android:id="@+id/accueilTVafficherArrivee"
        android:layout_below="@+id/accueilETChoixDepart"
        android:layout_marginTop="5dp"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@id/accueilTVafficherDepart"
        android:gravity="center" />

    <EditText
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:id="@+id/accueilETChoixArrivee"
        android:background="@drawable/rect_blanc_bord_noir"
        android:focusableInTouchMode="false"
        android:layout_below="@+id/accueilETChoixDepart"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_alignEnd="@id/accueilETChoixDepart"
        android:text="@string/accueilETChoixArrivee"
        android:layout_alignStart="@+id/accueilETChoixDepart" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/accueilTVdateDepart"
        android:textSize="20sp"
        android:background="@drawable/rect_blanc_bord_noir"
        android:id="@+id/accueilTVdateDepart"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_below="@+id/accueilTVafficherArrivee"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:id="@+id/accueilETdateDepart"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@drawable/rect_blanc_bord_noir"
        android:focusableInTouchMode="false"
        android:text="@string/accueilETdateDepart"
        android:layout_alignTop="@+id/accueilTVdateDepart"
        android:layout_toEndOf="@id/accueilTVdateDepart"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/accueilTVdateArrivee"
        android:textSize="20sp"
        android:background="@drawable/rect_blanc_bord_noir"
        android:id="@+id/accueilTVdateArrivee"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_below="@+id/accueilTVdateDepart"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:id="@+id/accueilETdateArrivee"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@drawable/rect_blanc_bord_noir"
        android:focusableInTouchMode="false"
        android:text="@string/accueilETdateDepart"
        android:layout_alignTop="@+id/accueilTVdateArrivee"
        android:layout_toEndOf="@id/accueilTVdateArrivee"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/accueilCBallerRetour"
        android:checked="false"
        android:textSize="20sp"
        android:id="@+id/accueilCBallerRetour"
        android:layout_above="@+id/accueilETdateDepart"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/accueilTVchoixClasse"
        android:textSize="20sp"
        android:background="@drawable/rect_blanc_bord_noir"
        android:id="@+id/accueilTVchoixClasse"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:layout_below="@+id/accueilTVdateDepart"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accueilSPclasse"
        android:background="@drawable/rect_blanc_bord_noir"
        android:layout_alignTop="@+id/accueilTVchoixClasse"
        android:layout_alignBottom="@id/accueilTVchoixClasse"
        android:layout_toEndOf="@+id/accueilTVchoixClasse"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
